Prevent pre tags overflowing off the page
Fixes current homepage overflow bug

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,6 +83,7 @@ blockquote {
 
 pre {
   padding-left: 1.5rem;
+  overflow-x: auto;
 }
 
 table {
